# python3-cyberfusion-queue-support

./: .env.ci  .env.local  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  alembic.debian.ini  alembic.ini  alembic.local.ini  pyproject.toml  setup.cfg
.run/: Template Python tests.run.xml
debian/: changelog  control  install  python3-cyberfusion-queue-support.cron.d  python3-cyberfusion-queue-support.postinst  python3-cyberfusion-queue-support.pydist  python3-cyberfusion-queue-support.sysusers  rules
etc/: queue-support.conf
etc/cronscripts/: purge-queues.cron
requirements/: dev.txt  test.txt
src/cyberfusion/QueueSupport/: __init__.py  database.py  outcomes.py  settings.py
tests/: conftest.py  stubs.py
tests/feature_tests/: test_base.py
tests/feature_tests/items/: test_chmod.py  test_chown.py  test_command.py  test_copy.py  test_database_create.py  test_database_drop.py  test_database_user_drop.py  test_database_user_ensure_state.py  test_database_user_grant_grant.py  test_database_user_grant_revoke.py  test_mkdir.py  test_move.py  test_rmtree.py  test_systemd_daemon_reload.py  test_systemd_tmp_files_create.py  test_systemd_unit_disable.py  test_systemd_unit_enable.py  test_systemd_unit_reload.py  test_systemd_unit_restart.py  test_systemd_unit_start.py  test_systemd_unit_stop.py  test_unlink.py
tests/feature_tests/scripts/: test_purge_queues.py
tests/unit_tests/: test_base.py  test_encoders.py  test_outcomes.py  test_utilities.py
tests/unit_tests/items/: test_base.py  test_chmod.py  test_chown.py  test_command.py  (+19 more)
(+27 files in other folders)
