[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-queue-support"
version = "4.0"
description = "Library to queue actions."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "python3-cyberfusion-systemd-support~=2.2",
    "python3-cyberfusion-database-support~=3.2.2",
    "alembic==1.18.4",
    "SQLAlchemy==2.0.46",
    "pydantic-settings==2.12.0",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-queue-support"

[project.scripts]
queue-support-migrate = "cyberfusion.QueueSupport.database:run_migrations"
queue-support-purge-queues = "cyberfusion.QueueSupport.scripts.purge_queues:main"

[tool.coverage.run]
omit = [
    "*/migrations/*"
]
